--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+     <!-- tweets from https://twitter.com/FRANCIS90776084 -->
+        
   </head>
   <body>
     <div id="app"></div>
